creacion de la pantalla de registro, creacion de logica para manejar los inputs, edicion en la ui y cambio de logo

--- a/css/button.css
+++ b/css/button.css
@@ -21,6 +21,9 @@
   color: var(--main-bg-color);
   text-decoration: none;
 }
+.button--singIn-First{
+  display: none;
+}
 @media (max-width: 480px){
   
 }
